# kaizen-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  README.md  debug_config.py  debug_targeting.py  debug_test_structure.py  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  test_analyze_fix_attempt.py  test_async_llamaindex_fix.py  test_attempts_failure_scenarios.py  test_augment_example.yaml  test_baseline_inclusion.py  test_better_ai_flag.py  test_build_fix_prompt.py  test_build_fix_prompt_detailed.py  test_config.yaml  test_email_agent_runner.py  test_end_to_end_memory_to_report.py  test_enhanced_code_extractor.py  test_enhanced_logging.py  test_enhanced_logging_simple.py  test_env_loading.py  test_env_setup.py  test_execution_history_simple.py  test_file.py  test_fix_config.yaml  test_framework_integration.py  test_full_context.augmented.yaml  test_full_context.yaml  test_llamaindex_agent.py  test_llamaindex_agent_with_utils.py  test_memory_integration.py  test_memory_to_pr_description_end_to_end.py  (+18 more)
docs/: branch-listing-limitation-guide.md  conf.py  environment-setup.md  github-access-issue-resolution.md  organization-access-troubleshooting.md  private-repository-setup.md  troubleshooting-env-vars.md
experimental/: test_generator.py
kaizen/: __init__.py  __main__.py  agent_runners.py  autofix.py  cli.py  code_region.py  config.py  evaluator.py  logger.py  (+4 more)
kaizen-agent-docs/: DEPLOY.md  DEPLOYMENT.md  README.md  SETUP.md  docusaurus.config.ts  manual-deploy.sh  package-lock.json  package.json  sidebars.ts
(+169 files in other folders)
